# sec-filings

./: Cargo.toml  DOCS.MD  a.json  error.txt
.github/workflows/: main.yml
filings/: failed.txt
filings/2025/%m/: 20250214-filing.json
filings/2025/02/: 20250214-filing.json
src/: lib.rs  main.rs
src/database/: insert_models.rs  mod.rs  query_models.rs
src/miner/: mod.rs
src/secgov/: mod.rs  models.rs
src/secgov/parser/: atomfilings.rs  index.rs  mod.rs
