[package]
name = "secfilings"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "secfilings"
#crate-type = ["cdylib"]

[dependencies]
chrono = { version = "^0", features = ["serde"]}
minidom = "0.15.0"
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive", "rc"]}
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
bigdecimal = "0.3.0"
futures = "0.3.25"
chrono-tz = "0.8.1"
tokio-util = { version = "0.7.13", features = ["compat"] }
tiberius = "0.12.3"
bytes = "1.10.0"
flate2 = "1.0"
once_cell = "1.20.3"

